--- a/javaWeb/demo-hibernate/src/main/webapp/WEB-INF/views/includes/css/table_style.css
+++ b/javaWeb/demo-hibernate/src/main/webapp/WEB-INF/views/includes/css/table_style.css
@@ -1,12 +1,20 @@
+body {
+    padding-left: 10%;
+    padding-top: 5%;
+    background-color: #F4F4F4;
+}
+
 #customers {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    width: 80%;
+    width: 70%;
     border-collapse: collapse;
+    border-radius: 15px;
+    -moz-border-radius:15px;
 }
 
 #customers td, #customers th {
     font-size: 1em;
-    border: 1px solid #98bf21;
+    border: 1px solid #87CEFF;
     padding: 3px 7px 2px 7px;
 }
 
@@ -15,20 +23,28 @@
     text-align: left;
     padding-top: 5px;
     padding-bottom: 4px;
-    background-color: #A7C942;
+    background-color: #6495ED;
     color: #ffffff;
 }
 
 #customers tr.alt td {
     color: #000000;
-    background-color: #EAF2D3;
+    background-color: #B2DFEE;
 }
 
 #btnSubmit {
     font-size: 1em;
     border-radius: 5px;
     color: #ffffff;
-    background-color: #98bf21;
+    background-color: #63B8FF;
     width: 60px;
     height: 30px;
+}
+
+input{
+    width: 150px;
+    height:25px;
+    background-color: #ffffff;
+    border: 1px solid #B2DFEE;
+    border-radius:1%;
 }
